feat: enhance customer chat draggable FAB and fix staff schedule view